--- a/app/src/main/res/layout/activity_aero_entry.xml
+++ b/app/src/main/res/layout/activity_aero_entry.xml
@@ -58,5 +58,15 @@
         android:hint="Descripcion"
         android:inputType="textMultiLine" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edt_descripcion"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp"
+        android:text="@string/guardar"
+        android:onClick="submit"/>
+
 
 </RelativeLayout>
