--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="left">10dp</dimen>
     <dimen name="top">20dp</dimen>
+    <dimen name="top2">50dp</dimen>
     <dimen name="letra">33sp</dimen>
+    <dimen name="letra2">25sp</dimen>
 </resources>
