Subi mis cambios a este branch por si acaso habia cambios

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,7 @@
 
     <item
         android:id="@+id/registro"
+        android:icon="@drawable/icons8_running_50"
         android:title="@string/Registro" />
     <group android:checkableBehavior="single">
         <item
