Cambios en la opcion de "mas", ya se puede usar

--- a/app/src/main/res/layout/activity_activities.xml
+++ b/app/src/main/res/layout/activity_activities.xml
@@ -1,173 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.ivan.proyectofinalv2.SelectActivity"
-    style="@style/AppTheme">
+    tools:context="com.example.ivan.proyectofinalv2.SelectActivity" >
 
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/lst_Actividades"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top"
-        android:onClick="launchEnterActivity"
-        android:orientation="horizontal"
-        android:background="#b3e5fc">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+    </ListView>
 
-        <ImageView
-            android:id="@+id/imgRunning"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_running_50" />
-
-        <TextView
-            android:id="@+id/tvRunning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/letra"
-            android:text="@string/Correr"
-            android:layout_marginLeft="@dimen/left"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top"
-        android:onClick="launchEnterActivity"
-        android:orientation="horizontal"
-        android:background="#b3e5fc">
-
-        <ImageView
-            android:id="@+id/imgCycling"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_cycling_50" />
-
-        <TextView
-            android:id="@+id/tvCycling"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/left"
-            android:layout_weight="1"
-            android:text="@string/Ciclismo"
-            android:textSize="@dimen/letra" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top"
-        android:onClick="launchEnterActivity"
-        android:orientation="horizontal"
-        android:background="#b3e5fc">
-
-        <ImageView
-            android:id="@+id/imgSwimming"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_swimming_50" />
-
-        <TextView
-            android:id="@+id/tvSwimming"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/left"
-            android:layout_weight="1"
-            android:text="@string/Natacion"
-            android:textSize="@dimen/letra" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top"
-        android:onClick="launchEnterActivity"
-        android:orientation="horizontal"
-        android:background="#b3e5fc">
-
-        <ImageView
-            android:id="@+id/imgWalking"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_walking_filled_50" />
-
-        <TextView
-            android:id="@+id/tvWalking"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/left"
-            android:layout_weight="1"
-            android:text="Caminata"
-            android:textSize="@dimen/letra" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top"
-        android:onClick="launchEnterActivity"
-        android:orientation="horizontal"
-        android:background="#b3e5fc">
-
-        <ImageView
-            android:id="@+id/imgPesas"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_weightlifting_50" />
-
-        <TextView
-            android:id="@+id/tvPesas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/left"
-            android:layout_weight="1"
-            android:text="@string/Pesas"
-            android:textSize="@dimen/letra" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/top"
-        android:onClick="launchEnterActivity"
-        android:orientation="horizontal"
-        android:background="#b3e5fc">
-
-        <ImageView
-            android:id="@+id/imgFuerza"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/icons8_pushups_50" />
-
-        <TextView
-            android:id="@+id/tvFuerza"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center_vertical"
-            android:textSize="@dimen/letra"
-            android:text="@string/Fuerza"
-            android:layout_marginLeft="@dimen/left"/>
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
