Cambios Extremos, modifique la base de datos, Ya quedo el summary y la grafica la doy por muerta

--- a/app/src/main/res/layout/activity_aero_entry.xml
+++ b/app/src/main/res/layout/activity_aero_entry.xml
@@ -42,13 +42,57 @@
         android:text="Duracion"
         android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/edt_tiempo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="0:00:00"
-        android:textAlignment="center"
-        android:textSize="@dimen/letra2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/edt_horas"
+                android:textSize="@dimen/letra2"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="hh" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:textSize="@dimen/letra2"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text=":"  />
+
+            <TextView
+                android:id="@+id/edt_minutos"
+                android:textSize="@dimen/letra2"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="mm" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:textSize="@dimen/letra2"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text=":"  />
+
+            <TextView
+                android:id="@+id/edt_segundos"
+                android:textSize="@dimen/letra2"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="ss" />
+        </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,17 +107,18 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:hint="Distancia" />
 
-        <Spinner
-            android:id="@+id/spinner"
-            style="@style/Widget.AppCompat.Spinner"
+        <TextView
+            android:id="@+id/tvKm"
+            android:textSize="@dimen/letra2"
+            android:textAlignment="center"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:minHeight="@dimen/letra2"
-            android:scrollbarSize="@dimen/letra2" />
+            android:text="Km"  />
+
     </LinearLayout>
 
     <EditText
