--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -48,11 +48,11 @@
 
     <TextView
         android:id="@+id/tvTiempo2"
-        android:textSize="@dimen/letra2"
-        android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="@dimen/letra2" />
 
     <TextView
         android:id="@+id/tvDescripcion"
