Ya tomo forma esta app, falta diseño

--- a/app/src/main/res/layout/activity_distancias.xml
+++ b/app/src/main/res/layout/activity_distancias.xml
@@ -3,10 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/chart"
+    <ListView
+        android:id="@+id/distancias"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        android:entries="@array/distancias"/>
 </LinearLayout>
