--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+  <color name="colorActivated">#caeeff</color>
+  <color name="colorPrimary">#C41230</color>
+  <color name="colorPrimaryDark">#9E0C24</color>
+  <color name="textPrimary">#000</color>
+  <color name="colorAccent">#FFCCD4</color>
+  <color name="colorHighlight">#ffaaff</color>
 </resources>
