--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,10 @@
     <dimen name="left">10dp</dimen>
     <dimen name="top">20dp</dimen>
     <dimen name="top2">50dp</dimen>
+    <dimen name="top3">70dp</dimen>
     <dimen name="letra">33sp</dimen>
     <dimen name="letra2">25sp</dimen>
+    <dimen name="app_bar_height">200dp</dimen>
+    <dimen name="item_width">200dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
